--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.scss">
-  <title>Document</title>
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <title>Trello</title>
+  
 </head>
 
 <body>
@@ -59,80 +61,113 @@
         </div>
       </div>
     </header>
-
-    <aside>
-      <div class="header">
-        <div class="aside_head_profile">
-          <button>P</button>
-        </div>
-        <div class="status">
-          <h1 class="user_name">PRODIGY: рабочее
-            пространство</h1>
-          <p class="price">Бесплатно</p>
-        </div>
-        <div class="hide_aside">
-          <button>
+    <div class="lower_header_box">
+      <aside>
+        <div class="header">
+          <div class="aside_head_profile">
+            <button>P</button>
+          </div>
+          <div class="status">
+            <h1 class="user_name">PRODIGY: рабочее
+              пространство</h1>
+            <p class="price">Бесплатно</p>
+          </div>
+          <div class="hide_aside">
+            <button>
+              <img src="public/hide_aside.svg" alt="">
+            </button>
+          </div>
+          <div class="show_aside hide">
             <img src="public/hide_aside.svg" alt="">
-          </button>
-        </div>
-        <div class="show_aside hide">
-          <img src="public/hide_aside.svg" alt="">
-        </div>
-      </div>
-
-      <div class="body">
-        <div class="first_part">
-          <div class="desks hovered">
-            <img src="public/desks.svg" alt="">
-            <p class="desk">Доски</p>
           </div>
-          <div class="members hovered">
-            <span>
-              <img src="public/member.svg" alt="">
-              <p class="desk">Участники</p>
-            </span>
-            <span>
+        </div>
+  
+        <div class="body">
+          <div class="first_part">
+            <div class="desks hovered">
+              <img src="public/desks.svg" alt="">
+              <p class="desk">Доски</p>
+            </div>
+            <div class="members hovered">
+              <span>
+                <img src="public/member.svg" alt="">
+                <p class="desk">Участники</p>
+              </span>
+              <span>
+                <img src="public/add.svg" alt="">
+              </span>
+            </div>
+            <div class="setings hovered">
+              <span>
+                <img src="public/settings.svg" alt="">
+                <p class="desk">Настройки рабочего
+                  пространства</p>
+              </span>
+              <span>
+                <img src="public/show.svg" alt="">
+              </span>
+            </div>
+          </div>
+  
+          <div class="second_part">
+            <h2 class="modes">Режимы просмотра рабочего прос…</h2>
+  
+            <div class="table hovered">
+              <img src="public/table.svg" alt="table">
+              <p class="table">Таблица</p>
+            </div>
+            <div class="calendar hovered">
+              <img src="public/calendar.svg" alt="calendar">
+              <p class="calendar">Таблица</p>
+            </div>
+          </div>
+  
+          <div class="third_part">
+            <div class="my_desks">
+              <h2>Мои доски</h2>
               <img src="public/add.svg" alt="">
-            </span>
-          </div>
-          <div class="setings hovered">
-            <span>
-              <img src="public/settings.svg" alt="">
-              <p class="desk">Настройки рабочего
-                пространства</p>
-            </span>
-            <span>
-              <img src="public/show.svg" alt="">
-            </span>
+            </div>
+  
+            <div class="my_desk">
+              <div class="desk"></div>
+              <h2>Desk Name</h2>
+            </div>
           </div>
         </div>
-
-        <div class="second_part">
-          <h2 class="modes">Режимы просмотра рабочего прос…</h2>
-
-          <div class="table hovered">
-            <img src="public/table.svg" alt="table">
-            <p class="table">Таблица</p>
-          </div>
-          <div class="calendar hovered">
-            <img src="public/calendar.svg" alt="calendar">
-            <p class="calendar">Таблица</p>
-          </div>
+      </aside>
+      <div class="lower_header">
+        <div class="lower_header_l">
+          <a id="dot_logo" href="#">DOT DEVS</a>
+          <a class="invert" href=""><img width="20px" src="https://cdn3.iconfinder.com/data/icons/linecons-free-vector-icons-pack/32/star-256.png" alt=""></a>
+          <a class="invert" href="#"><img width="20px" src="https://cdn2.iconfinder.com/data/icons/lightly-icons/30/group-480.png" alt=""></a>
+          <a href="" class="byDesk">
+            <img width="20px" src="https://cdn4.iconfinder.com/data/icons/web-and-mobile-ui/24/UI-20-256.png" alt="">
+            <p>По доске </p>
+          </a>
+          <a href=""><img class="invert" width="20px" src="https://cdn1.iconfinder.com/data/icons/arrows-vol-1-5/24/dropdown_arrow2-256.png" alt=""></a>
         </div>
-
-        <div class="third_part">
-          <div class="my_desks">
-            <h2>Мои доски</h2>
-            <img src="public/add.svg" alt="">
+        <div class="lower_header_r">
+          <a href="#"><img class="invert" width="20px" src="https://cdn0.iconfinder.com/data/icons/phosphor-regular-vol-4/256/rocket-launch-512.png" alt=""></a>
+          <a href="#"><img class="invert" width="20px" src="https://cdn4.iconfinder.com/data/icons/essentials-set-3/100/Electricity-256.png" alt=""></a>
+          <a class="flex" href="#"><img class="invert" width="20px" src="https://cdn1.iconfinder.com/data/icons/material-core/18/filter-256.png" alt=""><p>Фильтры</p></a>
+          <a class="PFPs" href="#">
+            <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=pexels-simon-robben-614810.jpg&fm=jpg" alt="" class="pfp">
+            <img src="https://media.istockphoto.com/id/1410538853/photo/young-man-in-the-public-park.webp?b=1&s=170667a&w=0&k=20&c=pGdjFVdK-_BhTa6PMy5VNcXdbxVNngzg-OPzMfJKrG8=" alt="" class="pfp">
+            <img src="https://images.generated.photos/VKm_RrXhmrpLNgZ4U3UgO0vMiLzikgR6aPW5Gr_hCzg/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MzI4NTQ5LmpwZw.jpg" alt="" class="pfp">
+            <img src="https://cdn.pixabay.com/photo/2018/10/29/21/46/human-3782189_640.jpg" alt="" class="pfp">
+            <img src="https://play-lh.googleusercontent.com/ivAXDbkway-Tfh_aiaivOkrb0ok52is0EpW6WuEUMx4fXZPg1AIrjUEIN3pYjoHE9Os=s256-rw" alt="" class="pfp">
+            <span>+1</span>
+          </a>
+          <div class="share">
+            <img width="20px" src="https://cdn4.iconfinder.com/data/icons/social-productivity-line-art-4/128/add-user-256.png" alt="">
+            <p class="white">Поделится</p>
           </div>
-
-          <div class="my_desk">
-            <div class="desk"></div>
-            <h2>Desk Name</h2>
-          </div>
+          <a href=""><img width="30px" class="invert" src="https://cdn4.iconfinder.com/data/icons/mauscons/89/ic-misc-256.png" alt=""> </a>
         </div>
       </div>
-    </aside>
+
+    </div>
+    
   </div>
 
   <script src="main.js"></script>
