todo list added

--- a/index.html
+++ b/index.html
@@ -164,6 +164,47 @@
           </div>
           <a href=""><img width="30px" class="invert" src="https://cdn4.iconfinder.com/data/icons/mauscons/89/ic-misc-256.png" alt=""> </a>
         </div>
+        <div class="absol">
+          <div class="task_box">
+            <div class="task_box_top">
+              <p>Нужно сделать</p>
+              <img width="30px" class="invert" src="https://cdn4.iconfinder.com/data/icons/mauscons/89/ic-misc-256.png"> 
+            </div>
+            <div class="task_box_items">
+
+            </div>
+            <div class="task_box_bottom">
+              <img class="invert" src="https://cdn3.iconfinder.com/data/icons/user-interface-169/32/plus-256.png" alt="">
+              <p>Добавить карточку</p>
+            </div>
+          </div>
+          <div class="task_box">
+            <div class="task_box_top">
+              <p>В процессе</p>
+              <img width="30px" class="invert" src="https://cdn4.iconfinder.com/data/icons/mauscons/89/ic-misc-256.png"> 
+            </div>
+            <div class="task_box_items">
+              
+            </div>
+            <div class="task_box_bottom">
+              <img class="invert" src="https://cdn3.iconfinder.com/data/icons/user-interface-169/32/plus-256.png" alt="">
+              <p>Добавить карточку</p>
+            </div>
+          </div>
+          <div class="task_box">
+            <div class="task_box_top">
+              <p>Готово</p>
+              <img width="30px" class="invert" src="https://cdn4.iconfinder.com/data/icons/mauscons/89/ic-misc-256.png"> 
+            </div>
+            <div class="task_box_items">
+              
+            </div>
+            <div class="task_box_bottom">
+              <img class="invert" src="https://cdn3.iconfinder.com/data/icons/user-interface-169/32/plus-256.png" alt="">
+              <p>Добавить карточку</p>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
