--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<img src="https://cdn.pixabay.com/photo/2018/10/29/21/46/human-3782189_640.jpg" alt="" class="pfp">
 				<img src="https://play-lh.googleusercontent.com/ivAXDbkway-Tfh_aiaivOkrb0ok52is0EpW6WuEUMx4fXZPg1AIrjUEIN3pYjoHE9Os=s256-rw"
 					alt="" class="pfp">
-				<span>+1</span>
+				<span class="add_mem">+1</span>
 			</a>
 			<div class="share">
 				<img width="20px"
@@ -267,9 +267,33 @@
 			</div>
 		</div>
 	</div>
+	<div class="modal m2 hide">
+		<div class="modal__dialog">
+			<div class="modal__content2">
+				<div data-close2 class="modal__close">&times;</div>
+				<center>
+					<form name="add_mem">
+						<input type="text" placeholder="E-mail or phoune" class="mem_inps">
+						<input type="text" placeholder="Name" class="mem_inps">
+						<div class="imgs_member">
+							<img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=pexels-simon-robben-614810.jpg&fm=jpg"
+							alt="" class="m_img active">
+						<img src="https://media.istockphoto.com/id/1410538853/photo/young-man-in-the-public-park.webp?b=1&s=170667a&w=0&k=20&c=pGdjFVdK-_BhTa6PMy5VNcXdbxVNngzg-OPzMfJKrG8="
+							alt="" class="m_img">
+						<img src="https://images.generated.photos/VKm_RrXhmrpLNgZ4U3UgO0vMiLzikgR6aPW5Gr_hCzg/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MzI4NTQ5LmpwZw.jpg"
+							alt="" class="m_img">
+						<img src="https://cdn.pixabay.com/photo/2018/10/29/21/46/human-3782189_640.jpg" alt="" class="m_img">
+						<img src="https://play-lh.googleusercontent.com/ivAXDbkway-Tfh_aiaivOkrb0ok52is0EpW6WuEUMx4fXZPg1AIrjUEIN3pYjoHE9Os=s256-rw"
+							alt="" class="m_img">
+						</div>
+						<button class="add_btnm">Add member</button>
+					</form>
+				</center>
+			</div>
+		</div>
+	</div>
 	<script type="module" src="main.js"></script>
 	<script type="module" src="/modules/modals.js"></script>
 	<script type="module" src="/modules/formdata.js"></script>
 </body>
-
 </html>
