--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					src="https://cdn1.iconfinder.com/data/icons/material-core/18/filter-256.png" alt="">
 				<p>Фильтры</p>
 			</a>
-			<a class="PFPs" href="#">
+			<button class="PFPs" href="#">
 				<img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=pexels-simon-robben-614810.jpg&fm=jpg"
 					alt="" class="pfp">
 				<img src="https://media.istockphoto.com/id/1410538853/photo/young-man-in-the-public-park.webp?b=1&s=170667a&w=0&k=20&c=pGdjFVdK-_BhTa6PMy5VNcXdbxVNngzg-OPzMfJKrG8="
@@ -96,12 +96,12 @@
 				<img src="https://play-lh.googleusercontent.com/ivAXDbkway-Tfh_aiaivOkrb0ok52is0EpW6WuEUMx4fXZPg1AIrjUEIN3pYjoHE9Os=s256-rw"
 					alt="" class="pfp">
 				<span>+1</span>
-			</a>
+			</button>
 			<div class="share">
 				<img width="20px"
 					src="https://cdn4.iconfinder.com/data/icons/social-productivity-line-art-4/128/add-user-256.png"
 					alt="">
-				<p class="white">Поделится</p>
+				<p class="white">Поделиться</p>
 			</div>
 			<a href=""><img width="30px" class="invert"
 					src="https://cdn4.iconfinder.com/data/icons/mauscons/89/ic-misc-256.png" alt=""> </a>
@@ -127,7 +127,7 @@
 					<img src="public/hide_aside.svg" alt="">
 				</div>
 			</div>
-	
+
 			<div class="body">
 				<div class="first_part">
 					<div class="desks hovered">
@@ -154,10 +154,10 @@
 						</span>
 					</div>
 				</div>
-	
+
 				<div class="second_part">
 					<h2 class="modes">Режимы просмотра рабочего прос…</h2>
-	
+
 					<div class="table hovered">
 						<img src="public/table.svg" alt="table">
 						<p class="table">Таблица</p>
@@ -167,13 +167,13 @@
 						<p class="calendar">Таблица</p>
 					</div>
 				</div>
-	
+
 				<div class="third_part">
 					<div class="my_desks">
 						<h2>Мои доски</h2>
 						<img src="public/add.svg" alt="">
 					</div>
-	
+
 					<div class="my_desk">
 						<div class="desk"></div>
 						<h2>Desk Name</h2>
@@ -185,11 +185,11 @@
 			<div class="div_emp">
 				<span class="title-span">Cделать</span>
 				<div class="empty">
-	
+
 				</div>
 				<button class="add add1">
-					<span class="plus"><svg width="24" height="24" role="presentation" focusable="false" viewBox="0 0 24 24"
-							xmlns="http://www.w3.org/2000/svg">
+					<span class="plus"><svg width="24" height="24" role="presentation" focusable="false"
+							viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 							<path
 								d="M12 3C11.4477 3 11 3.44772 11 4V11L4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11L13 11V4C13 3.44772 12.5523 3 12 3Z"
 								fill="currentColor"></path>
@@ -200,11 +200,11 @@
 			<div class="div_emp">
 				<span class="title-span">В ходе выполнения</span>
 				<div class="empty">
-	
+
 				</div>
 				<button class="add add2">
-					<span class="plus"><svg width="24" height="24" role="presentation" focusable="false" viewBox="0 0 24 24"
-							xmlns="http://www.w3.org/2000/svg">
+					<span class="plus"><svg width="24" height="24" role="presentation" focusable="false"
+							viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 							<path
 								d="M12 3C11.4477 3 11 3.44772 11 4V11L4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11L13 11V4C13 3.44772 12.5523 3 12 3Z"
 								fill="currentColor"></path>
@@ -215,11 +215,11 @@
 			<div class="div_emp">
 				<span class="title-span">Сделано</span>
 				<div class="empty">
-	
+
 				</div>
 				<button class="add add3">
-					<span class="plus"><svg width="24" height="24" role="presentation" focusable="false" viewBox="0 0 24 24"
-							xmlns="http://www.w3.org/2000/svg">
+					<span class="plus"><svg width="24" height="24" role="presentation" focusable="false"
+							viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 							<path
 								d="M12 3C11.4477 3 11 3.44772 11 4V11L4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11L13 11V4C13 3.44772 12.5523 3 12 3Z"
 								fill="currentColor"></path>
@@ -229,7 +229,7 @@
 			</div>
 		</div>
 	</main>
-	
+
 	<div class="modal">
 		<div class="modal__dialog">
 			<div class="modal__content">
@@ -246,7 +246,7 @@
 					</div>
 					<div>
 						<div class="modal__title">Выберите участников команды</div>
-						<select name="members" class="modal__input">
+						<select name="members" class="modal__input members_select">
 							<option value="farrux">farrux</option>
 						</select>
 					</div>
@@ -267,6 +267,50 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="members_modal hide">
+		<div class="modal_content">
+			<div class="modal__close close_members">&times;</div>
+			<form name="memberAdd">
+				<span>
+					<h3>Имя участника</h3>
+					<input type="name" name="name" placeholder="Member Name">
+				</span>
+				<span>
+					<h3>Должность участника</h3>
+					<select name="job" id="job">
+						<option value="Frontend developer">Frontend developer</option>
+						<option value="Designer">Designer</option>
+						<option value="Backend developer">Backend developer</option>
+						<option value="SMM specialist">SMM specialist</option>
+					</select>
+				</span>
+				<h3>Аватарка участника</h3>
+				<span class="buttons">
+					<button type="button" class="ava">
+						<img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=pexels-simon-robben-614810.jpg&fm=jpg"
+							alt="" class="pfp">
+					</button>
+					<button type="button" class="ava">
+						<img src="https://media.istockphoto.com/id/1410538853/photo/young-man-in-the-public-park.webp?b=1&s=170667a&w=0&k=20&c=pGdjFVdK-_BhTa6PMy5VNcXdbxVNngzg-OPzMfJKrG8="
+							alt="" class="pfp">
+					</button>
+					<button type="button" class="ava">
+						<img src="https://images.generated.photos/VKm_RrXhmrpLNgZ4U3UgO0vMiLzikgR6aPW5Gr_hCzg/rs:fit:256:256/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MzI4NTQ5LmpwZw.jpg"
+							alt="" class="pfp">
+					</button>
+					<button type="button" class="ava">
+						<img src="https://play-lh.googleusercontent.com/ivAXDbkway-Tfh_aiaivOkrb0ok52is0EpW6WuEUMx4fXZPg1AIrjUEIN3pYjoHE9Os=s256-rw"
+							alt="" class="pfp">
+					</button>
+				</span>
+
+				<button class="ADD">Добавить участника</button>
+			</form>
+		</div>
+	</div>
+
+
 	<script type="module" src="main.js"></script>
 	<script type="module" src="/modules/modals.js"></script>
 	<script type="module" src="/modules/formdata.js"></script>
