--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 				<div data-close2 class="modal__close">&times;</div>
 				<center>
 					<form name="add_mem">
-						<input type="text" placeholder="E-mail or phoune" class="mem_inps">
-						<input type="text" placeholder="Name" class="mem_inps">
+						<input type="text" name="email" placeholder="E-mail or phoune" class="mem_inps">
+						<input type="text" name="name" placeholder="Name" class="mem_inps">
 						<div class="imgs_member">
 							<img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?cs=srgb&dl=pexels-simon-robben-614810.jpg&fm=jpg"
 							alt="" class="m_img active">
