--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 		<div class="container">
 			<div class="div_emp">
 				<span class="title-span">Cделать</span>
-				<div class="empty">
+				<div class="empty" data-status="todo">
 
 				</div>
 				<button class="add add1">
@@ -199,7 +199,7 @@
 			</div>
 			<div class="div_emp">
 				<span class="title-span">В ходе выполнения</span>
-				<div class="empty">
+				<div class="empty" data-status="inprogress">
 
 				</div>
 				<button class="add add2">
@@ -214,7 +214,7 @@
 			</div>
 			<div class="div_emp">
 				<span class="title-span">Сделано</span>
-				<div class="empty">
+				<div class="empty" data-status="done">
 
 				</div>
 				<button class="add add3">
