--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
 			</div>
 		</div>
 	</div>
+	<div class="div_bin hide">
+		<img src="/public/free-icon-recycle-bin-3156999.png" alt="" class="bin">
+	</div>
 	<script type="module" src="main.js"></script>
 	<script type="module" src="/modules/modals.js"></script>
 	<script type="module" src="/modules/formdata.js"></script>
