--- a/index.html
+++ b/index.html
@@ -310,6 +310,9 @@
 		</div>
 	</div>
 
+	<div class="bin hide">
+		<img src="/public/delete.png" alt="">
+	</div>
 
 	<script type="module" src="main.js"></script>
 	<script type="module" src="/modules/modals.js"></script>
