--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 			</form>
 		</div>
 	</div>
-	<div class="trash">
+	<div class="trash" data-status="delete" >
 		<div class="trash_head"></div>
 		<img src="/public/better_trash.png" alt="">
 	</div>
