--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<div class="neag"></div>
 	<header>
 		<div class="head_big_box">
 			<div class="header_box">
@@ -41,7 +42,7 @@
 			</div>
 
 			<div class="header_box">
-				<div class="search">
+				<div class="search" id="search" >
 					<img src="public/search.svg" alt="search">
 					<input type="text" name="search" id="search" placeholder="Поиск">
 				</div>
