--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="header_box">
 				<div class="search" id="search" >
 					<img src="public/search.svg" alt="search">
-					<input type="text" name="search" id="search" placeholder="Поиск">
+					<input type="text" class="sear" name="search" id="search" placeholder="Поиск">
 				</div>
 				<div class="help_box">
 					<button class="message">
